tests/codegen/fail/dylib_requires_export_build.ql
fn add_one(value: Int) -> Int {
    return value + 1
}
